# self-learn

./: .gitignore  CLAUDE.md
backend/: .env.example  .gitignore  BACKLOG_P5.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.superpowers/sdd/: progress.md
backend/docs/skills/: skill.director.start.md  skill.exercise.generate.md  skill.plan.generate.md  skill.profile.build.md  skill.review.exercise.md
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py  2f78430b5478_add_lecture_html.py  8ae5ad324ca9_stage3_business_tables.py  a1c3f9d2e6b4_add_resources_and_kp_source.py  f1963078e4e4_stage4_profile_snapshots.py
backend/prompts/: exercise_generation_v1.yaml  review_exercise_v1.yaml
backend/schemas/: exercise.schema.json  extract_topics.schema.json
backend/scripts/: backfill_lecture_html.py  e2e_md_driven.sh  purge_test_data.py  seed_dev.py  seed_map.py  smoke.sh  smoke_mvp.sh
backend/skills/skill.director.start/: SKILL.md
backend/skills/skill.exercise.generate/: SKILL.md
backend/skills/skill.lecture.generate/: SKILL.md
backend/skills/skill.plan.generate/: SKILL.md
backend/skills/skill.profile.build/: SKILL.md
backend/skills/skill.profile.onboard/: SKILL.md
backend/skills/skill.resource.extract_topics/: SKILL.md
backend/skills/skill.review.exercise.business/: SKILL.md
backend/skills/skill.review.exercise.llm/: SKILL.md
backend/src/selflearn/: __init__.py  config.py  main.py  mcp_client.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/integration/: __init__.py  test_api_gaps.py  test_director_e2e.py  test_extract_topics_sse.py  test_skill_startup.py  test_smoke.py  test_smoke_mvp.py
backend/tests/unit/: test_aop_integration.py  test_aop_llm.py  test_cors.py  (+49 more)
(+309 files in other folders)
