[project]
name = "selflearn-backend"
version = "0.1.0"
description = "Stage 2 后端地基"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "qdrant-client>=1.7",
    "minio>=7.2",
    "aio-pika>=9.4",
    "openai>=1.40",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "python-json-logger>=2.0",
    "structlog>=24.1",
    "jsonschema>=4.26.0",
    "types-jsonschema>=4.26.0.20260518",
    "python-frontmatter>=1.1",
    "mcp>=0.9.0",
    "nh3>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.4",
    "testcontainers>=4.4",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selflearn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
disable_error_code = ["misc", "no-any-return"]

[[tool.mypy.overrides]]
module = ["qdrant_client.*", "minio.*", "aio_pika.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.36.2",
]
